@@ -2,6 +2,10 @@
 
 	* call_uncrustify.sh: 
 
+2013-09-03  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* call_uncrustify.sh: 
+
 2013-08-24  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* call_uncrustify.sh: 
