@@ -6,6 +6,10 @@
 
 	* main.cpp: 
 
+2013-09-03  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* main.cpp: 
+
 2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* x3dtidy.cproj: 
