@@ -1,5 +1,9 @@
 2013-09-03  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* SupportedNodes.cpp: 
+
+2013-09-03  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Appearance.h:
 	* Appearance.cpp:
 	* ShaderPart.cpp:
